Tweak physics to make game more responsive. Jump with space bar. Edit 404 text

--- a/public/404.html
+++ b/public/404.html
@@ -5,6 +5,6 @@
   <body>
     <h1>404</h1>
     
-    <p>Were you just making up filenames or what? 123123123</p>
+    <p>Not found... :(</p>
   </body>
 </html>
